# GNS3-MCP-Server

./: .gitignore  README.md  http_server.py  mcp-server.json  pyproject.toml  run.bat  run.sh  server.py  server_http.py
.gemini/: settings.json
helper/: console_harvester.py
